--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:generate": "typeorm-ts-node-commonjs migration:generate src/modules/database/migrations/migrations -d ormconfig.ts",
+    "migration:run": "typeorm-ts-node-commonjs -d ormconfig.ts migration:run",
+    "migration:revert": "typeorm-ts-node-commonjs -d ormconfig.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
