--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.3.1",
+    "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
