media module done with user avatar upload'

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,10 @@ MAIL_DEFAULT_NAME=Danimai
 # JWT
 AUTH_JWT_SECRET=random-gibberish-token-for-jwt
 AUTH_JWT_TOKEN_EXPIRES_IN=90d
+
+# STORAGE
+STORAGE_TYPE=S3
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_KEY=
+AWS_REGION=
+AWS_BUCKET=
