--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "migration:revert": "typeorm-ts-node-commonjs -d ormconfig.ts migration:revert"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.554.0",
     "@nestjs-modules/mailer": "^1.11.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
@@ -36,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "morgan": "^1.10.0",
+    "multer-s3": "^3.0.1",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.5",
     "reflect-metadata": "^0.2.0",
@@ -50,6 +52,8 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
