--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "googleapis": "^134.0.0",
     "morgan": "^1.10.0",
     "multer-s3": "^3.0.1",
     "passport-jwt": "^4.0.1",
