11 chapter CRUD operation done

--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migration:generate": "typeorm-ts-node-commonjs migration:generate src/modules/database/migrations/migrations -d ormconfig.ts",
-    "migration:run": "typeorm-ts-node-commonjs -d ormconfig.ts migration:run",
-    "migration:revert": "typeorm-ts-node-commonjs -d ormconfig.ts migration:revert"
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/.bin/typeorm",
+    "migration:generate": "npm run typeorm -- migration:generate src/modules/database/migrations/migrations -d ormconfig.ts",
+    "migration:run": "npm run typeorm -- -d ormconfig.ts migration:run",
+    "migration:revert": "npm run typeorm -- -d ormconfig.ts migration:revert"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.554.0",
